基础l-on处理完成

--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,12 @@
         a:{c:1},
         b:'hello',
         c:'world',
-        show:true,
+        show:false,
         arr:['asdfsadf','liberty'],
       },
       methods:{
         talk(){
-          alert(111+this.c);
+          console.log(11);
         }
       },
       watch:{
